--- a/install
+++ b/install
@@ -21,8 +21,8 @@ sudo apt-get install libnotify-dev -y
 sudo chmod +x tg
 lua FiOnA.lua
 sudo chmod +x FiOnA
-sudo chmod +x ./FwA
-./FwA
+sudo chmod +x ./FoA
+./FoA
 }
 if [ "$1" = "install" ]; then
 install
@@ -34,6 +34,6 @@ fi
 sudo chmod +x tg
 lua FiOnA.lua
 sudo chmod +x FiOnA
-sudo chmod +x ./FwA
-./FwA
+sudo chmod +x ./FoA
+./FoA
 fi
